--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
     <!-- Counter Section End -->
 
     <!-- Team Section Begin -->
-    <section class="team spad set-bg" data-setbg="img/team-bg.jpg">
+    <!-- <section class="team spad set-bg" data-setbg="img/team-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -363,7 +363,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team Section End -->
 
     <!-- Latest Blog Section Begin -->
@@ -492,7 +492,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__top__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/LOGO2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -511,9 +511,9 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an award-winning, full-service
-                                production company specializing.</p>
-                            <a href="#" class="read__more">Read more <span class="arrow_right"></span></a>
+                            <p>I blend storytelling, motion, and design to craft videos and graphics that captivate audiences.
+From editing to branding, I deliver high-quality visuals that make your brand unforgettable.</p>
+                            <a href="about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
