--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                             <span>Our services</span>
                             <h2>What We do?</h2>
                         </div>
-                        <p>If you hire a videographer of our team you will get a video professional to make a custom
-                            video for your business and, once the project is over.</p>
+                        <p>If you work with me, you get a creative professional who delivers high-quality video editing and modern graphic designs tailored for your brand, business, or personal projects. I handle everything from concept to final output with precision and creativity.</p>
                         <a href="#" class="primary-btn">View all services</a>
                     </div>
                 </div>
@@ -143,8 +142,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                                     <img src="img/icons/si-1.png" alt="">
                                 </div>
                                 <h4>Motion graphics</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
-                                    post production services can put the finishing touches.</p>
+                                <p>I create smooth, modern motion graphics, animated titles, logo animations, and visual effects that bring your stories and branding to life.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -152,7 +150,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                                 <div class="services__item__icon">
                                     <img src="img/icons/si-2.png" alt="">
                                 </div>
-                                <h4>Scriptwriting and editing</h4>
+                                <h4>Video Editing</h4>
                                 <p>Whether you’re halfway through the editing process, or you haven’t even started, our
                                     post production services can put the finishing touches.</p>
                             </div>
@@ -162,9 +160,8 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                                 <div class="services__item__icon">
                                     <img src="img/icons/si-3.png" alt="">
                                 </div>
-                                <h4>Video distribution</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
-                                    post production services can put the finishing touches.</p>
+                                <h4>Graphic Design</h4>
+                                <p>From logos and branding to posters, thumbnails, and social media creatives, I design clean, modern graphics that fit your brand identity.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -172,9 +169,8 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                                 <div class="services__item__icon">
                                     <img src="img/icons/si-4.png" alt="">
                                 </div>
-                                <h4>Video hosting</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
-                                    post production services can put the finishing touches.</p>
+                                <h4>Thumbnail & Social Media Designs</h4>
+                                <p>I create scroll-stopping thumbnails, ad creatives, and social posts that increase clicks, engagement, and brand visibility.</p>
                             </div>
                         </div>
                     </div>
@@ -250,7 +246,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                         <div class="counter__item">
                             <div class="counter__item__text">
                                 <img src="img/icons/ci-1.png" alt="">
-                                <h2 class="counter_num">230</h2>
+                                <h2 class="counter_num">150</h2>
                                 <p>Compled Projects</p>
                             </div>
                         </div>
@@ -259,7 +255,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                         <div class="counter__item second__item">
                             <div class="counter__item__text">
                                 <img src="img/icons/ci-2.png" alt="">
-                                <h2 class="counter_num">1068</h2>
+                                <h2 class="counter_num">120</h2>
                                 <p>Happy clients</p>
                             </div>
                         </div>
@@ -268,7 +264,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                         <div class="counter__item third__item">
                             <div class="counter__item__text">
                                 <img src="img/icons/ci-3.png" alt="">
-                                <h2 class="counter_num">230</h2>
+                                <h2 class="counter_num">100</h2>
                                 <p>Perspective clients</p>
                             </div>
                         </div>
@@ -277,7 +273,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
                         <div class="counter__item four__item">
                             <div class="counter__item__text">
                                 <img src="img/icons/ci-4.png" alt="">
-                                <h2 class="counter_num">230</h2>
+                                <h2 class="counter_num">90</h2>
                                 <p>Compled Projects</p>
                             </div>
                         </div>
