--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="img/hero/hero_image.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="img/hero/hero_image1.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="img/hero/hero_image2.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
