--- a/portfolio.html
+++ b/portfolio.html
@@ -459,6 +459,53 @@
 </div>
 
 
+
+<div class="col-lg-4 col-md-6 col-sm-6 mix videoed">
+    <div class="portfolio__item">
+        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/video-1.jpg">
+           
+             <video controls class="myvideo">
+                <source src="video/sequence9.mp4" type="video/mp4">
+            </video>
+
+
+        </div>
+
+
+        <div class="portfolio__item__text">
+            <h4>Video Editing Project</h4>
+            <ul>
+                <li>Premiere Pro</li>
+                <li>Color Grading</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
+<div class="col-lg-4 col-md-6 col-sm-6 mix videoed">
+    <div class="portfolio__item">
+        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/video-1.jpg">
+           
+             <video controls class="myvideo">
+                <source src="video/sequence10.mp4" type="video/mp4">
+            </video>
+
+
+        </div>
+
+
+        <div class="portfolio__item__text">
+            <h4>Video Editing Project</h4>
+            <ul>
+                <li>Premiere Pro</li>
+                <li>Color Grading</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
 <!-- THUMBNAILS -->
 <div class="col-lg-4 col-md-6 col-sm-6 mix thumbnail">
     <div class="portfolio__item">
