--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
     <!-- Counter Section End -->
 
     <!-- Team Section Begin -->
-    <section class="team spad set-bg" data-setbg="img/team-bg.jpg">
+    <!-- <section class="team spad set-bg" data-setbg="img/team-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -428,7 +428,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team Section End -->
 
     <!-- Footer Section Begin -->
