--- a/blog.html
+++ b/blog.html
@@ -219,13 +219,13 @@
     <!-- Blog Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer">
+     <footer class="footer">
         <div class="container">
             <div class="footer__top">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__top__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/LOGO2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -244,19 +244,19 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an award-winning, full-service
-                                production company specializing.</p>
-                            <a href="#" class="read__more">Read more <span class="arrow_right"></span></a>
+                            <p>I blend storytelling, motion, and design to craft videos and graphics that captivate audiences.
+From editing to branding, I deliver high-quality visuals that make your brand unforgettable.</p>
+                            <a href="about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
                             <h5>Who we are</h5>
                             <ul>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Carrers</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Locations</a></li>
+                             <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -264,10 +264,12 @@
                         <div class="footer__option__item">
                             <h5>Our work</h5>
                             <ul>
-                                <li><a href="#">Feature</a></li>
-                                <li><a href="#">Latest</a></li>
-                                <li><a href="#">Browse Archive</a></li>
-                                <li><a href="#">Video for web</a></li>
+                           <li><a href="portfolio.html#video-editing">Video Editing</a></li>
+<li><a href="portfolio.html#motion-graphics">Motion Graphics</a></li>
+<li><a href="portfolio.html#graphic-design">Graphic Design</a></li>
+<li><a href="portfolio.html#thumbnails-social">Thumbnails & Social Media</a></li>
+<li><a href="portfolio.html#branding-logo">Branding & Logo Design</a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -291,8 +293,7 @@
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
