--- a/contact.html
+++ b/contact.html
@@ -197,10 +197,10 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Who we are</h5>
                             <ul>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Carrers</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Locations</a></li>
+                             <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -208,10 +208,12 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Our work</h5>
                             <ul>
-                                <li><a href="#">Feature</a></li>
-                                <li><a href="#">Latest</a></li>
-                                <li><a href="#">Browse Archive</a></li>
-                                <li><a href="#">Video for web</a></li>
+                           <li><a href="portfolio.html#video-editing">Video Editing</a></li>
+<li><a href="portfolio.html#motion-graphics">Motion Graphics</a></li>
+<li><a href="portfolio.html#graphic-design">Graphic Design</a></li>
+<li><a href="portfolio.html#thumbnails-social">Thumbnails & Social Media</a></li>
+<li><a href="portfolio.html#branding-logo">Branding & Logo Design</a></li>
+
                             </ul>
                         </div>
                     </div>
