--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
     <!-- Call To Action Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer">
+       <footer class="footer">
         <div class="container">
             <div class="footer__top">
                 <div class="row">
@@ -516,10 +516,10 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Who we are</h5>
                             <ul>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Carrers</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Locations</a></li>
+                             <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -527,10 +527,12 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Our work</h5>
                             <ul>
-                                <li><a href="#">Feature</a></li>
-                                <li><a href="#">Latest</a></li>
-                                <li><a href="#">Browse Archive</a></li>
-                                <li><a href="#">Video for web</a></li>
+                           <li><a href="portfolio.html#video-editing">Video Editing</a></li>
+<li><a href="portfolio.html#motion-graphics">Motion Graphics</a></li>
+<li><a href="portfolio.html#graphic-design">Graphic Design</a></li>
+<li><a href="portfolio.html#thumbnails-social">Thumbnails & Social Media</a></li>
+<li><a href="portfolio.html#branding-logo">Branding & Logo Design</a></li>
+
                             </ul>
                         </div>
                     </div>
