--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="hero__text">
                                 <span>VIDEO + GRAPHIC DESIGN THAT GROWS BRANDS</span>
                                 <h2>Whether you need product videos, ads, reels, intros, thumbnails, or complete brand identity</h2>
-                                <a href="services" class="primary-btn">Services</a>
+                                <a href="services.html" class="primary-btn">Services</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                 <span>LET’S CREATE SOMETHING AMAZING TOGETHER</span>
                                 <h2>I’m available for freelance work, long-term collaboration, and brand partnerships.
 Share your idea—I’ll turn it into visuals that stand out.</h2>
-                                <a href="Contact Us" class="primary-btn">See more about us</a>
+                                <a href="contact.html" class="primary-btn">See more about us</a>
                             </div>
                         </div>
                     </div>
@@ -466,19 +466,35 @@ Share your idea—I’ll turn it into visuals that stand out.</h2>
     <!-- Latest Blog Section End -->
 
     <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/callto-bg.jpg">
+    <!-- <section class="callto spad set-bg" data-setbg="img/bgimage_.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="callto__text">
                         <h2>Fresh Ideas, Fresh Moments Giving Wings to your Stories.</h2>
-                        <p>INC5000, Best places to work 2019</p>
+                      
                         <a href="#">Start your stories</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+<section class="callto spad set-bg" data-setbg="img/bgimage_.jpg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="callto__text">
+                    <h2>Fresh Ideas, Fresh Moments Giving Wings to your Stories.</h2>
+                    <a href="#">Start your stories</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
     <!-- Call To Action Section End -->
 
     <!-- Footer Section Begin -->
