--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-2.png" alt="">
                         </div>
-                        <h4>Scriptwriting and editing</h4>
+                        <h4>🎬 Professional Video Editing</h4>
                         <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
                             production services can put the finishing touches.</p>
                     </div>
@@ -110,9 +110,8 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-1.png" alt="">
                         </div>
-                        <h4>Motion graphics</h4>
-                        <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
-                            production services can put the finishing touches.</p>
+                        <h4>🎨 Motion Graphics & Visual Effects</h4>
+                        <p>Animated titles, logo reveals, lower thirds, transitions, and modern graphic effects that bring energy and professionalism to your videos.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -120,9 +119,9 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-2.png" alt="">
                         </div>
-                        <h4>Scriptwriting and editing</h4>
-                        <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
-                            production services can put the finishing touches.</p>
+                        <h4>🎥 Content Creation for Businesses & Creators
+</h4>
+                        <p>From script to final output—videos, graphics, and promotional content crafted specifically for brands, influencers, agencies, and online creators.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -130,9 +129,10 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-3.png" alt="">
                         </div>
-                        <h4>Video distribution</h4>
-                        <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
-                            production services can put the finishing touches.</p>
+                        <h4>
+🖌️ Graphic Design & Branding
+</h4>
+                        <p>Creative and impactful designs including logos, posters, banners, social posts, and complete brand identity visuals tailored to your business.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -140,9 +140,8 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-4.png" alt="">
                         </div>
-                        <h4>Video hosting</h4>
-                        <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
-                            production services can put the finishing touches.</p>
+                        <h4>📸 Thumbnail & Social Media Creative Design</h4>
+                        <p>High-impact thumbnails, creative posts, ad creatives, and platform-optimized visuals designed to increase clicks, views, and engagement across social media.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -150,9 +149,10 @@
                         <div class="services__item__icon">
                             <img src="img/icons/si-4.png" alt="">
                         </div>
-                        <h4>Video hosting</h4>
-                        <p>Whether you’re halfway through the editing process, or you haven’t even started, our post
-                            production services can put the finishing touches.</p>
+                        <h4>
+🖥️ Video Formatting & Platform Optimization
+</h4>
+                        <p>Exporting and preparing content in perfect formats for YouTube, Instagram, Facebook, websites, and ads. Ensuring quality, compression, and resolution are flawless.</p>
                     </div>
                 </div>
             </div>
