--- a/services.html
+++ b/services.html
@@ -177,6 +177,23 @@
             </div>
         </div>
     </section>
+
+
+
+<section class="callto spad set-bg" data-setbg="img/bgimage.jpg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="callto__text">
+                    <h2>CREATE STUNNING VIDEOS & DESIGNS WITH MY CREATIVE EXPERTISE</h2>
+                    <p>I combine powerful video editing, motion graphics, and modern design to help you create content that stands out and connects with your audience.</p>
+                    <a href="contact.html">Start your stories</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     <!-- Call To Action Section End -->
 
     <!-- Logo Begin -->
