--- a/services.html
+++ b/services.html
@@ -2,12 +2,12 @@
 <html lang="zxx">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Videograph Template">
-    <meta name="keywords" content="Videograph, unica, creative, html">
+      <meta charset="UTF-8">
+    <meta name="description" content="JAY PORTFOLIO">
+    <meta name="keywords" content="JAY PORTFOLIO, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Videograph | Template</title>
+    <title>JAY PORTFOLIO</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
@@ -161,7 +161,7 @@
     <!-- Services Section End -->
 
     <!-- Call To Action Section Begin -->
-    <section class="callto sp__callto">
+    <!-- <section class="callto sp__callto">
         <div class="container">
             <div class="callto__services spad set-bg" data-setbg="img/calltos-bg.jpg">
                 <div class="row d-flex justify-content-center">
@@ -176,7 +176,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
