--- a/about.html
+++ b/about.html
@@ -100,15 +100,15 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="about__pic__item about__pic__item--large set-bg"
-                                    data-setbg="img/about/about-1.jpg"></div>
+                                    data-setbg="img/about_.png"></div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="img/about/about-2.jpg"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="img/about_1.jpg"></div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="img/about/about-3.jpg"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="img/about_2.jpg"></div>
                                     </div>
                                 </div>
                             </div>
