--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-          <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="description" content="JAY PORTFOLIO">
     <meta name="keywords" content="JAY PORTFOLIO, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -203,7 +203,7 @@
     <!-- About Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="img/testimonial-bg.jpg">
+    <section class="testimonial spad set-bg" data-setbg="img/bgimage_.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -218,8 +218,9 @@
                     <div class="col-lg-4">
                         <div class="testimonial__item">
                             <div class="testimonial__text">
-                                <p>Delivers such a great service that it can benefit all kinds of people from any number
-                                    of industries.</p>
+                                <p>“Jay transformed our raw footage into a cinematic masterpiece.
+The editing, color grading, and transitions were absolutely flawless.
+His design sense added a professional polish that elevated our brand.”</p>
                             </div>
                             <div class="testimonial__author">
                                 <div class="testimonial__author__pic">
@@ -235,8 +236,9 @@
                     <div class="col-lg-4">
                         <div class="testimonial__item">
                             <div class="testimonial__text">
-                                <p>Videographer delivers such a great service that it can benefit all kinds of people
-                                    from any number.</p>
+                                <p>What impressed me the most was the speed and creativity.
+Jay delivered motion graphics and marketing creatives that helped us boost our engagement instantly.
+A true professional with an eye for detail.</p>
                             </div>
                             <div class="testimonial__author">
                                 <div class="testimonial__author__pic">
@@ -252,8 +254,9 @@
                     <div class="col-lg-4">
                         <div class="testimonial__item">
                             <div class="testimonial__text">
-                                <p>Videographer delivers such a great service that it can benefit all kinds of people
-                                    from any number.</p>
+                                <p>Jay handled our complete video production and graphic design needs.
+From thumbnails to reels to promotional ads—everything was visually stunning.
+Highly reliable, easy to communicate with, and incredibly talented</p>
                             </div>
                             <div class="testimonial__author">
                                 <div class="testimonial__author__pic">
@@ -432,7 +435,7 @@
     <!-- Team Section End -->
 
     <!-- Footer Section Begin -->
-      <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__top">
                 <div class="row">
@@ -457,8 +460,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I blend storytelling, motion, and design to craft videos and graphics that captivate audiences.
-From editing to branding, I deliver high-quality visuals that make your brand unforgettable.</p>
+                            <p>I blend storytelling, motion, and design to craft videos and graphics that captivate
+                                audiences.
+                                From editing to branding, I deliver high-quality visuals that make your brand
+                                unforgettable.</p>
                             <a href="about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
@@ -466,10 +471,10 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Who we are</h5>
                             <ul>
-                             <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="contact.html">Contact us</a></li>
-                               
+
                             </ul>
                         </div>
                     </div>
@@ -477,11 +482,11 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                         <div class="footer__option__item">
                             <h5>Our work</h5>
                             <ul>
-                           <li><a href="portfolio.html#video-editing">Video Editing</a></li>
-<li><a href="portfolio.html#motion-graphics">Motion Graphics</a></li>
-<li><a href="portfolio.html#graphic-design">Graphic Design</a></li>
-<li><a href="portfolio.html#thumbnails-social">Thumbnails & Social Media</a></li>
-<li><a href="portfolio.html#branding-logo">Branding & Logo Design</a></li>
+                                <li><a href="portfolio.html#video-editing">Video Editing</a></li>
+                                <li><a href="portfolio.html#motion-graphics">Motion Graphics</a></li>
+                                <li><a href="portfolio.html#graphic-design">Graphic Design</a></li>
+                                <li><a href="portfolio.html#thumbnails-social">Thumbnails & Social Media</a></li>
+                                <li><a href="portfolio.html#branding-logo">Branding & Logo Design</a></li>
 
                             </ul>
                         </div>
@@ -506,7 +511,7 @@ From editing to branding, I deliver high-quality visuals that make your brand un
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
-                            
+
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
