--- a/about.html
+++ b/about.html
@@ -272,8 +272,9 @@ Highly reliable, easy to communicate with, and incredibly talented</p>
                     <div class="col-lg-4">
                         <div class="testimonial__item">
                             <div class="testimonial__text">
-                                <p>Delivers such a great service that it can benefit all kinds of people from any number
-                                    of industries.</p>
+                                <p>Working with Jay was a game-changer for our social media presence.
+His edits, color grading, and graphic layouts made every reel and post look premium.
+Our engagement doubled within weeks.</p>
                             </div>
                             <div class="testimonial__author">
                                 <div class="testimonial__author__pic">
@@ -289,8 +290,9 @@ Highly reliable, easy to communicate with, and incredibly talented</p>
                     <div class="col-lg-4">
                         <div class="testimonial__item">
                             <div class="testimonial__text">
-                                <p>Videographer delivers such a great service that it can benefit all kinds of people
-                                    from any number.</p>
+                                <p>Jay took our product videos and turned them into stunning, high-impact visuals.
+The motion graphics were smooth, modern, and perfectly aligned with our brand identity.
+His work consistently exceeds expectations</p>
                             </div>
                             <div class="testimonial__author">
                                 <div class="testimonial__author__pic">
