--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="row portfolio__gallery">
-                <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-1.jpg">
                             <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
@@ -240,11 +240,11 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
              <!-- LOGO DESIGN -->
-<div class="col-lg-4 col-md-6 col-sm-6 mix logodesign">
+<!-- <div class="col-lg-4 col-md-6 col-sm-6 mix logodesign">
     <div class="portfolio__item">
         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/logo-1.jpg">
             <a href="https://www.youtube.com/watch?v=ScMzIvxBSi4" class="play-btn video-popup">
@@ -259,7 +259,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- SOCIAL MEDIA POST -->
 <div class="col-lg-4 col-md-6 col-sm-6 mix social">
